--- a/operations/nginx/default.conf
+++ b/operations/nginx/default.conf
@@ -48,6 +48,13 @@ server {
   listen [::]:8080 ssl http2;
   server_name byname.byu.edu;
 
+  location /api {
+    auth_basic "Admin Area. Access Restricted";
+    auth_basic_user_file /etc/apache2/.htpasswd;
+
+    proxy_pass http://localhost:3000;
+  }
+
   location / {
     proxy_pass http://localhost:3000;
   }
