allow usage fixes #66

--- a/operations/nginx/default.conf
+++ b/operations/nginx/default.conf
@@ -6,6 +6,7 @@ server {
     location / {
         root   /data/www;
         index  index.html index.htm;
+        add_header Content-Security-Policy "frame-ancestors my.byu.edu";
     }
 
     location /images/ {
@@ -57,6 +58,7 @@ server {
 
   location / {
     proxy_pass http://localhost:3000;
+    add_header Content-Security-Policy "frame-ancestors my.byu.edu";
   }
 
     ssl_certificate /etc/letsencrypt/live/byname.byu.edu/fullchain.pem; # managed by Certbot
